--- a/src/Paginas/SeccionDetalles/SeccionDetalles.css
+++ b/src/Paginas/SeccionDetalles/SeccionDetalles.css
@@ -28,8 +28,10 @@
 }
 .contenedor-logo-SeccionDetalles {
     background: white;
-    width: 80px;
-    height: 75px;
+    max-width: 80px;
+    min-width: 80px;
+    max-height: 80px;
+    min-width: 80px;
     border-radius: 50%;
     padding: 5px;
     display: flex;
