--- a/src/Paginas/SeccionRolUsuario/SeccionRolUsuario.css
+++ b/src/Paginas/SeccionRolUsuario/SeccionRolUsuario.css
@@ -1,4 +1,4 @@
-.contenedor-SeccionPaciente {
+.contenedor-SeccionRolUsuario {
     background-image: url(../../Imagenes/2.png);
     position: relative;
     background-repeat: no-repeat;
@@ -10,14 +10,14 @@
     justify-content: space-between;
 }
 
-.encabezado-SeccionPaciente {
+.encabezado-SeccionRolUsuario {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: flex-start;
 } 
 @media only screen and (max-width: 850px) {
-    .encabezado-SeccionPaciente {
+    .encabezado-SeccionRolUsuario {
         display: flex;
         flex-flow: column;
         justify-content: space-evenly;
@@ -28,10 +28,10 @@
 }
 
 
-.logo-SeccionPaciente {
+.logo-SeccionRolUsuario {
     width: 130px;
 }
-.seccion-nuevas-tecnologias-SeccionPaciente {
+.seccion-nuevas-tecnologias-SeccionRolUsuario {
     position: relative;
     width: 400px;
     height: 170px;
@@ -41,18 +41,18 @@
 
     
 }
-.imagen-nueva-tecnologia-SeccionPaciente {
+.imagen-nueva-tecnologia-SeccionRolUsuario {
     width: 150px;
     position: absolute;
     left: 0;
     z-index: 1;
 }
-.texto-nueva-tecnologia-SeccionPaciente {
+.texto-nueva-tecnologia-SeccionRolUsuario {
     z-index: 2;
     margin-left: 10vw;
 }
 
-.boton-nueva-tecnologia-SeccionPaciente {
+.boton-nueva-tecnologia-SeccionRolUsuario {
     width: 180px;
     height: 65px;
     padding: 0;
@@ -61,36 +61,36 @@
     margin-left: 10vw;
     transition: 0s ease all;
 }
-.contenedor-sedes-SeccionPaciente {
+.contenedor-sedes-SeccionRolUsuario {
     display: flex;
     justify-content: center;
 }
-.contenedor-mapa-sedes-SeccionPaciente {
+.contenedor-mapa-sedes-SeccionRolUsuario {
     width: 300px;
     height: 180px;
     border-radius: 5px;
     overflow: hidden;
     border: 1px solid rgba(0, 0, 0, 0.214);
 }
-.imagen-mapa-SeccionPaciente {
+.imagen-mapa-SeccionRolUsuario {
     width: 100%;
 }
 
-.contenedor-sedes-SeccionPaciente {
+.contenedor-sedes-SeccionRolUsuario {
     display: flex;
     flex-flow: row wrap;
 }
-.lista-sedes-SeccionPaciente {
+.lista-sedes-SeccionRolUsuario {
     margin: 20px;
 }
 
-.contenedor-informacion-SeccionPaciente {
+.contenedor-informacion-SeccionRolUsuario {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
     margin-top: 50px;
 }
-.link-sede-SeccionPaciente {
+.link-sede-SeccionRolUsuario {
     color: rgb(133, 133, 133);
     text-align: start;
     padding: 0;
@@ -100,13 +100,13 @@
     background: none;
     display:block
 }
-.link-sede-SeccionPaciente:hover {
+.link-sede-SeccionRolUsuario:hover {
     color: black;
     text-align: start;
     padding: 0;
     margin: 0;
 }
-.link-sede-SeccionPaciente.active {
+.link-sede-SeccionRolUsuario.active {
     color: rgb(0, 0, 0);
     text-decoration: underline;
     text-align: start;
@@ -115,11 +115,122 @@
 }
 
 
-.boton-chat-SeccionPaciente {
+.boton-chat-SeccionRolUsuario {
     border: 0;
     background: none;
     fill: #858786;
     position: absolute;
     bottom: 10px;
     right: 10px;
+}
+.boton-chat-SeccionRolUsuario:hover {
+    fill: #078245;
+}
+
+
+
+/*  Estillos Contenido Login     */
+.contenidoModal-login{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.contenidoModal-login .imgPerfil{
+        margin-top: 20px;
+        background: rgb(202, 202, 202);
+        width: 100px;
+        height: 100px;
+        border-radius: 50px;
+}
+.contenidoModal-login span{
+        font-size: 24px;
+        text-align: center;
+        padding-top: 20px;
+        padding-bottom: 10px;
+}
+.contenidoModal-login input{
+        width: 270px;
+        font-size: 14pt;
+        padding: 10px;
+        border: 1px solid rgba(148, 148, 148, 0.421);
+        border-radius: 5px;
+        margin-bottom: 10px;
+}
+.contenidoModal-login button{
+        margin-bottom: 10px;
+        width: 290px;
+        cursor: pointer;
+}
+    .contenidoModal-login   a {
+        cursor: pointer;
+        color: rgb(0, 55, 255);
+        text-decoration: none;
+}
+.contenidoModal-login .b1{
+        margin-top: 50px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        width: 100%;
+        text-align: center;
+        border-top: #9d9d9d52 1px solid;;
+ }
+.contenidoModal-login .b2{
+        cursor: pointer;
+        background: none;
+        border: 0;
+        color: rgb(0, 55, 255);
+        text-decoration: none;
+        width: 100%;
+        text-align: center;
+        font-size: 16px;
+}
+
+
+/* Estilos Contenido Contacto */
+
+.contenedorModal-contacto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contenedorModal-contacto .b1{
+    margin-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    text-align: center;
+    border-top: #9d9d9d52 1px solid;;
+}
+.contenedorModal-contacto h3 {
+        text-align: left;
+    margin: 20px;
+}
+.informacion-contacto {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.informacion-contacto svg {
+    fill: rgb(202, 30, 101);
+    margin-right: 15px;
+}
+.informacion-contacto input {
+    width: 290px;
+    font-size: 14pt;
+    padding: 10px;
+    border: 1px solid rgba(148, 148, 148, 0.421);
+    border-radius: 5px;
+    margin-bottom: 10px;
+    margin-top: 3px;
+}
+.informacion-contacto textarea {
+    height: 50px;
+    font-size: 14pt;
+    padding: 10px;
+    border: 1px solid rgba(148, 148, 148, 0.421);
+    border-radius: 5px;
+    margin-bottom: 10px;
+    min-width: 290px;
+    max-width: 290px;
 }
